[project]
name = "wsjtx-queue"
version = "0.1.0"
description = "Terminal queue manager for WSJT-X pileups, CQs, and digital-mode operating."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [
  { name = "AK6IM" }
]
dependencies = []

[project.scripts]
wsjtx-queue = "wsjtx_queue:main"
wsjtx-udp-hub = "wsjtx_udp_hub:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
target-version = ["py310"]
line-length = 88
