[project]
name = "wsjtx-queue"
version = "0.1.0"
description = "Terminal queue manager for WSJT-X pileups, CQs, and digital-mode operating."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [
  { name = "AK6IM" }
]
dependencies = []

[project.optional-dependencies]
textual = [
  "textual>=0.89",
]

[project.scripts]
wsjtx-queue = "wsjtx_queue:main"
wsjtx-queue-textual = "wsjtx_queue_textual:main"
wsjtx-udp-hub = "wsjtx_udp_hub:main"
wsjtx-udp-record = "wsjtx_udp_record:main"
wsjtx-udp-replay = "wsjtx_udp_replay:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
target-version = ["py310"]
line-length = 120
